--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>중간고사대체과제</title>
 </head>
 <body>
-    
+    <header>자기 소개를 위한 개인 홈페이지 작성</header>
+    <nav>nav</nav>
+    <section>section</section>
+    <aside>aside</aside>
+    <footer>footer</footer>
 </body>
 </html>
