--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -7,7 +7,8 @@
     <title>중간고사대체과제</title>
 </head>
 <body>
-    <header>자기 소개를 위한 개인 홈페이지 작성</header>
+    <h1>SW융합대학 소프트웨어학과 32191410 노지호</h1>
+    <header><p>자기 소개를 위한 개인 홈페이지 작성</p></header>
     <nav>nav</nav>
     <section>section</section>
     <aside>aside</aside>
