--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -9,8 +9,25 @@
 <body>
     <h1>SW융합대학 소프트웨어학과 32191410 노지호</h1>
     <header><p>자기 소개를 위한 개인 홈페이지 작성</p></header>
-    <nav>nav</nav>
-    <section>section</section>
+    <h2>소개</h2>
+    <ul>
+        <nav>
+            <li><a href="#a">인사</a>
+            <li><a href="#b">프로그래머가 된 계기</a>
+            <li><a href="#c">키우는 애완동물</a>
+            <li><a href="#d">장래희망</a></li>
+        </nav>
+    </ul>
+    <section>
+        <h2><article id="a">인사</a></article></h2>
+        <p>
+            안녕하세요, 저는 단국대학교 sw융합대학 소프트웨어 학과 에 재학중인
+            19학번 노지호 라고 합니다.
+        </p>
+        <h2><article id="a">프로그래머가 된 계기</a></article></h2>
+        <p>
+            저는 특이하게도 대학에 와서 코딩을 처음하게 되었습니다.
+        </p>
     <aside>aside</aside>
     <footer>footer</footer>
 </body>
