--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -20,14 +20,34 @@
     </ul>
     <section>
         <h2><article id="a">인사</a></article></h2>
+        <img src="https://static.wixstatic.com/media/f95ca2_55f56077b0514a41a1fdb88191831d9f~mv2.jpg" alt="My Image" width="500" height="500">
         <p>
-            안녕하세요, 저는 단국대학교 sw융합대학 소프트웨어 학과 에 재학중인
+            
+            안녕하세요, 저는 단국대학교 sw융합대학 소프트웨어학과에 재학중인<br>
             19학번 노지호 라고 합니다.
         </p>
-        <h2><article id="a">프로그래머가 된 계기</a></article></h2>
-        <p>
-            저는 특이하게도 대학에 와서 코딩을 처음하게 되었습니다.
+        <h2><article id="a">프로그래머가 된 계기</article></h2>
+            저는 특이하게도 대학에 와서 코딩을 처음 접하게 되었습니다.<br>
+            제가 고등학교를 졸업한 시기가 2019년인지라,<br>
+            학교에서도 코딩을 배워본적도, 해본적도 없었습니다.<br>
+            대학에 힘겹게 입학하였어도 비록 있는 것이라곤 사람들을 돕는 일을 하고 싶다는 막연한 생각뿐이었습니다.<br>
+            그러다 처음으로 대학에서 웹 인벤터를 이용한 안드로이드 어플리케이션 코딩을 해보게 되었습니다.<br>
+            모르는것 투성이에, 처음해보는 것들 뿐이였지만, 뭔가 실행이되고 만들어진다는 과정을 직접보고 결과물을 체크해가며<br>
+            하나하나 손으로 만드는 공예를 하는 느낌이라 신기하고 재밌었습니다.<br>
+            그 후,전과를 준비하였고. 현재는 소프트웨어학과생으로써 매우 만족하고 있습니다.<br>
+            <br>
+            코딩의 재미는, 자신이 원하는 것을 실제로 만들수 있는 점이라고 생각합니다.<br>
+            사람들을 돕는 소프트웨어도, 노인분들이 쉽게 사용할수 있는 키오스크나,<br>
+            보안에 미숙한 사람들을 위한 스펨메일이나 피싱전화 차단 어플을 만드는등의,<br>
+            정말 자신이 원하는 모든것을 이루어낼수 있다는것이 너무나도 매력적이라고 생각합니다.<br>
         </p>
+        <h2><article id="c">키우는 애완동물</article></h2>
+        <p>
+            <img src="https://static.wixstatic.com/media/f95ca2_af129a09138146b69789f0c165206444~mv2.jpg" alt="My pet" width="700" height="500">
+        </p>
+        집에서는 포메라이안 한마리를 키우고 있습니다.
+        이름은 감자 이며,
+        올해로 4살이 되었습니다.
     <aside>aside</aside>
     <footer>footer</footer>
 </body>
