--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -26,7 +26,8 @@
             안녕하세요, 저는 단국대학교 sw융합대학 소프트웨어학과에 재학중인<br>
             19학번 노지호 라고 합니다.
         </p>
-        <h2><article id="a">프로그래머가 된 계기</article></h2>
+        <h2><article id="b">프로그래머가 된 계기</article></h2>
+        <p> 
             저는 특이하게도 대학에 와서 코딩을 처음 접하게 되었습니다.<br>
             제가 고등학교를 졸업한 시기가 2019년인지라,<br>
             학교에서도 코딩을 배워본적도, 해본적도 없었습니다.<br>
@@ -45,10 +46,39 @@
         <p>
             <img src="https://static.wixstatic.com/media/f95ca2_af129a09138146b69789f0c165206444~mv2.jpg" alt="My pet" width="700" height="500">
         </p>
-        집에서는 포메라이안 한마리를 키우고 있습니다.
-        이름은 감자 이며,
-        올해로 4살이 되었습니다.
-    <aside>aside</aside>
-    <footer>footer</footer>
+        <p>집에서는 포메라이안 한마리를 키우고 있습니다.<br>
+            이름은 감자 이며,<br>
+            올해로 4살이 되었습니다.<br>
+            예쁜 회색털을 지니고 있으며, 사람들을 좋아합니다.<br>
+            처음에 분양받았을땐 웃지도 않고, 겁이 많아서 어딘가로 숨어버리는 강아지 였으나,<br>
+            지금은 오래 같이 지내서 잘 웃고, 애교가 많은 귀여운 강아지 입니다.<br>
+        </p>
+        <h2><article id="d">장래희망</article></h2>
+        <p>
+        현재 흥미를 보이는것이 보안쪽이기 때문에,<br>
+        보안회사에 취직하거나, 여러가지 해킹대회에 나가보고싶다는 생각이 있습니다.<br>
+        실제 현실에서도 보안이 가장 취약한 사각지대는 약한 사람들이니까요.<br>
+        사람들을 돕고 싶다는 제 의지와도 부합한다고 생각합니다.<br>
+        Heartbleed(하트블리드) 사태처럼 OpenSSL와 같은 오픈소스에 대한 보안 취약점을 열심히 탐구해보고 싶어졌기에<br>
+        오픈소스SW활용 2분반 강의를 듣는 학생으로써, 앞으로도 열심히 수업에 임하려 노력하겠습니다.<br>
+        또한 소프트웨어 보안에 관련된 일을 하면서,<br>
+        개인적으로는 다른쪽으로 사람들을 도울수있는 일들을 찾아볼것 같습니다.<br>
+        지금으로썬, 심리상담 어플을 만들어서 손쉽게 용기를 내지 못하는 힘든 사람들을 돕고 싶다는 생각이 있습니다.<br>
+        </p>
+        
+    <aside>
+        <p>
+        단국대에 오고 나서, 사람들을 돕는 방법도 여러가지가 있고,<br>
+        꼭 몸을 쓰거나, 사회에 헌신하지 않아도 할 수 있다는것을 코딩을 통해 알았습니다.<br>
+        사람들을 돕는 로봇,<br>
+        전동휠체어,<br>
+        로봇재활등 우리 사회의 많은 부분에 소프트웨어가 녹아있다는것을 깨달았습니다.<br>
+        <p>
+    </aside>
+    <footer>
+        <p>
+            Copyright 2022 by Jiho
+         <p>
+        </footer>
 </body>
 </html>
