--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>중간고사대체과제</title>
+    <style>
+        body{
+            background-color: aliceblue;
+        }
+        header{border-bottom : solid 1px black;}
+        h1{text-align: center; color: brown;}
+        h2{color:blue;text-shadow:2px 2px 2px skyblue;}
+        ul{border: dotted 1px black;}  
+        a{text-decoration: none;}
+        p{font-size: 1em;text-indent: 1em; font-family: "맑은 고딕";}
+        aside{font-size: 0.8em;}
+        footer{background-color: orange;border-radius: 50px;}
+        </style>
 </head>
 <body>
     <h1>SW융합대학 소프트웨어학과 32191410 노지호</h1>
