--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>중간고사대체과제</title>
     <style>
-        body{
+        body
+        {
             background-color: aliceblue;
         }
         header{border-bottom : solid 1px black;}
@@ -15,7 +16,7 @@
         ul{border: dotted 1px black;}  
         a{text-decoration: none;}
         p{font-size: 1em;text-indent: 1em; font-family: "맑은 고딕";}
-        aside{font-size: 0.8em;}
+        aside{font-size: 0.9em;}
         footer{background-color: orange;border-radius: 50px;}
         </style>
 </head>
