--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -30,6 +30,7 @@
             <li><a href="#b">프로그래머가 된 계기</a>
             <li><a href="#c">키우는 애완동물</a>
             <li><a href="#d">장래희망</a></li>
+            <li><a href="#e">단국대 2019년도 입학식 영상에 찍힌 순간</a></li>
         </nav>
     </ul>
     <section>
@@ -79,7 +80,6 @@
         개인적으로는 다른쪽으로 사람들을 도울수있는 일들을 찾아볼것 같습니다.<br>
         지금으로썬, 심리상담 어플을 만들어서 손쉽게 용기를 내지 못하는 힘든 사람들을 돕고 싶다는 생각이 있습니다.<br>
         </p>
-        
     <aside>
         <p>
         단국대에 오고 나서, 사람들을 돕는 방법도 여러가지가 있고,<br>
@@ -89,6 +89,10 @@
         로봇재활등 우리 사회의 많은 부분에 소프트웨어가 녹아있다는것을 깨달았습니다.<br>
         <p>
     </aside>
+    <section>
+    <h2><article id="e">단국대 2019년도 입학식 영상에 찍힌 순간</article></h2>
+    <iframe width="1120" height="630" src="https://www.youtube.com/embed/zRw0vyt0Gc8?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
     <footer>
         <p>
             Copyright 2022 by Jiho
