--- a/Mid-Term-Project.html
+++ b/Mid-Term-Project.html
@@ -92,6 +92,10 @@
     <section>
     <h2><article id="e">단국대 2019년도 입학식 영상에 찍힌 순간</article></h2>
     <iframe width="1120" height="630" src="https://www.youtube.com/embed/zRw0vyt0Gc8?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>
+        잠깐이긴하지만, 해당 영상의 0:08~0:10 동안에 신입생때의 저입니다.<br>
+        대학을 처음으로 입학하니 눈이 반겨주던게 기억에 남네요.<br>
+    </p>
     </section>
     <footer>
         <p>
